--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/manage.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/manage.html.twig
@@ -28,7 +28,7 @@
     {% include 'TopxiaAdminBundle:CloudFile/Form:filter.html.twig' %}
     {% include 'TopxiaAdminBundle:CloudFile/Form:sort.html.twig' %}
     {% include 'TopxiaAdminBundle:CloudFile/Form:batch.html.twig' %}
-    {% include 'TopxiaAdminBundle:CloudFile:table.html.twig' %}
+    {% include 'TopxiaAdminBundle:CloudFile:table.html.twig'  with {'pageType': 'file'} %}
   </form>
 </div>
 
