--- a/src/Topxia/AdminBundle/Resources/views/CloudFile/table.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/CloudFile/table.html.twig
@@ -1,11 +1,14 @@
 <div class="table-responsive">
-  <table class="table table-striped table-hover mtl" id="materials-table" data-url="{{ path('admin_cloud_file_render_table')}}">
+  <table class="table table-striped table-hover mtl" id="materials-table" data-url="{% if pageType == 'attachment'%}{{ path('admin_cloud_attachment_render')}}{% else %}{{ path('admin_cloud_file_render_table')}}{% endif %}">
     <thead>
       <tr>
         <th width="40%">文件</th>
         <th width="" class="text-center">类型</th>
         <th width="" class="text-center">大小</th>
         <th width="" class="text-center">上传时间</th>
+        {% if pageType == 'attachment'%}
+          <th width="" class="text-center">应用</th>
+        {% endif %}
         <th width="" class="text-center" style="min-width:98px">操作</th>
       </tr>
     </thead>
