--- a/src/Topxia/WebBundle/Resources/views/Group/setting-logo-crop.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Group/setting-logo-crop.html.twig
@@ -15,17 +15,17 @@
 {% block group_setting_body %}
 
   <div class="form-group clearfix">
-    <div class="col-md-offset-2 col-md-8 controls">
-      <img class="img-responsive" src="{{ filepath(pictureUrl) }}"
-      id="logo-crop"
-      width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}"/>
-      <div class="help-block">{{'提示：请选择图片裁剪区域。'|trans}}</div>
+    <div class="col-md-offset-1 col-md-10 controls">
+      <img src="{{ filepath(pictureUrl) }}" 
+      id="logo-crop" 
+      width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}" style="max-width:100%!important;height: auto;"/>
+      <div class="help-block ">{{'提示：请选择图片裁剪区域。'|trans}}</div>
     </div>
   </div>
   <div class="form-group clearfix">
-    <div class="col-md-offset-2 col-md-8 controls">
-      <a class="btn btn-fat btn-primary"
-      id="upload-picture-btn"
+    <div class="col-md-offset-1 col-md-10 controls">
+      <a class="btn btn-fat btn-primary" 
+      id="upload-picture-btn" 
       {% if app.request.get('page')=='backGroundLogoCrop' %}
       data-reload-url="{{path('group_backgroundlogo_set',{id:groupinfo.id})}}"
       {% elseif app.request.get('page')=='logoCrop' %}
@@ -34,6 +34,6 @@
       >{{'保存'|trans}}</a>
     </div>
   </div>
-
+  
 
 {% endblock %}
