--- a/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-classroom-info.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/Course/Part/normal-header-classroom-info.html.twig
@@ -2,5 +2,5 @@
 	{{'该课程属于'|trans}}
 		<a href="{{path('classroom_show', {id:classroom.id})}}">{{classroom.title}}</a>
 		</br>
-		{{'请加入后再学习'|trans}
+		{{'请加入后再学习'|trans}}
 {% endif %}
