--- a/src/Topxia/WebBundle/Resources/views/CourseManage/teachers.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/teachers.html.twig
@@ -66,7 +66,7 @@
                 <span class="glyphicon glyphicon-resize-vertical sort-handle"></span>
                 <img src="{{ avatar }}" class="avatar-small">
                 <span class="nickname">{{ nickname }}</span>
-                <label class="visible-checkbox"><input type="checkbox" value="1" name="visible_{{ id }}" {{#if isVisible }}checked="checked"{{/if}}> 显示</label>
+                <label class="visible-checkbox"><input type="checkbox" value="1" name="visible_{{ id }}" {{#if isVisible }}checked="checked"{{/if}}> {% endverbatim %}{{'显示'|trans}}{% verbatim %}</label>
                 <input type="hidden" name="ids[]" value="{{ id }}">
                 <button  class="close delete-btn" data-role="item-delete" type="button" title="删除" >&times; </button>
               </li>
