优化key删除无用key

--- a/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Form/nav.html.twig
+++ b/src/MaterialLib/MaterialLibBundle/Resources/views/Web/Form/nav.html.twig
@@ -8,7 +8,7 @@
       <a href="javascript:;">{{'视频'|trans}}</a>
     </li>
     <li class="js-type-btn" data-value="flash">
-      <a href="javascript:;">{{'flash'|trans}}</a>
+      <a href="javascript:;">flash</a>
     </li>
     <li class="js-type-btn" data-value="audio">
       <a href="javascript:;">{{'音频'|trans}}</a>
@@ -20,7 +20,7 @@
       <a href="javascript:;">{{'文档'|trans}}</a>
     </li>
     <li class="js-type-btn" data-value="ppt">
-      <a href="javascript:;">{{'PPT'|trans}}</a>
+      <a href="javascript:;">PPT</a>
     </li>
     <li class="js-type-btn" data-value="other">
       <a href="javascript:;">{{'其它'|trans}}</a>
