--- a/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseLessonManage/media-choose.html.twig
@@ -228,11 +228,11 @@
             <div class="alert alert-info">
               <ul>
                 {% if storageSetting.upload_mode == 'cloud' %}
-                  <li>{{'支持'|trans|raw}}<strong>{{'mp4, avi, flv, wmv, mov, m4v'|trans|raw}}</strong>{{'格式的视频文件上传，文件大小不能超过<strong>2 GB</strong>。'|trans|raw}}</li>
+                  <li>{{'支持'|trans|raw}}<strong>mp4, avi, flv, wmv, mov, m4v</strong>{{'格式的视频文件上传，文件大小不能超过<strong>2 GB</strong>。'|trans|raw}}</li>
                   <li>{{'支持'|trans|raw}}<strong>{{'断点续传'|trans|raw}}</strong>{{'（仅支持HTML5浏览器）。'|trans|raw}}</li>
                   <li>{{'视频将上传到'|trans|raw}}<strong>{{'云视频服务器'|trans|raw}}</strong>{{'，上传之后会对视频进行格式转换，转换过程需要一定的时间，在这个过程中视频将无法播放。'|trans|raw}}</li>
                 {% else %}
-                  <li>{{'支持'|trans}}<strong>{{'mp4'|trans}}</strong>{{'格式的视频文件上传，文件大小不能超过'|trans}}<strong>{{ upload_max_filesize() }} </strong>{{'。MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。'|trans}}</li>
+                  <li>{{'支持'|trans}}<strong>mp4</strong>{{'格式的视频文件上传，文件大小不能超过'|trans}}<strong>{{ upload_max_filesize() }} </strong>{{'。MP4文件的视频编码格式，请使用AVC(H264)编码，否则浏览器无法播放。'|trans}}</li>
                     <li>
                       {{'视频将上传到'|trans}}<strong>{{'网站服务器'|trans}}</strong>{{'。如需使用%Edusoho%云视频,点击'|trans({'%Edusoho%':'EduSoho'|copyright_less})}}<a href="http://open.edusoho.com/show/cloud/video" target="_blank">{{'这里'|trans}}</a>{{'了解详情,%Edusoho%云视频将为您提供稳定、安全、经济、便捷的视频托管服务以及优质的视频播放体验。'|trans({'%Edusoho%':'EduSoho'|copyright_less})}}
                     </li>
@@ -314,9 +314,9 @@
 
             <div class="alert alert-info">
               <ul>
-                <li>{{'支持'|trans}}<strong>{{'mp3'|trans}}</strong>{{'格式的音频文件上传，且文件大小不能超过'|trans}}<strong>
+                <li>{{'支持'|trans}}<strong>mp3</strong>{{'格式的音频文件上传，且文件大小不能超过'|trans}}<strong>
                   {% if storageSetting.upload_mode == 'cloud' %}
-                    {{'500M'|trans}}
+                    500M
                   {% else %}
                     {{ upload_max_filesize() }}
                   {% endif %}
@@ -397,7 +397,7 @@
 
             <div class="alert alert-info">
               <ul>
-                <li>{{'支持'|trans}}<strong>{{'ppt, pptx'|trans}}</strong>{{'格式的PPT文件上传，且文件大小不能超过'|trans}}<strong>{{'100 MB'|trans}}</strong>。</li>
+                <li>{{'支持'|trans}}<strong>ppt, pptx</strong>{{'格式的PPT文件上传，且文件大小不能超过'|trans}}<strong>100 MB</strong>。</li>
                 <li>{{'PPT将上传到'|trans}}<strong>{{'云服务器'|trans}}</strong></li>
               </ul>
             </div>
