--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/testpaper-result.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/testpaper-result.html.twig
@@ -12,21 +12,23 @@
 
   {% include 'TopxiaWebBundle:QuizQuestionTest:testpaper-result-objective.html.twig' %}
 
-  {% if paperResult.status == 'reviewing' %}
-    <div class="alert alert-warning">{{'老师正在批阅试卷，批阅完成后会以站内私信通知您批阅结果，请稍等。'|trans}}</div>
-  {% elseif paperResult.status == 'finished' %}
-    {% if paperResult.teacherSay %}
-      <div class="alert alert-success">
-        <div class=""><strong>{{'评语：'|trans}}</strong></div>
-        <div class="mtm">{{ paperResult.teacherSay|bbCode2Html|raw }}</div>
-      </div>
-    {% endif %}
-    {% if paperResult.passedStatus == 'unpassed' and target|default(null) %}
-      <div class="alert alert-danger">
-        您未通过考试，请<a href="{{ path('course_lesson_redo_test', {lessonId:target.id,testId:paperResult.testId}) }}">重新参加考试</a>，或者重新学习课程。
-      </div>
-    {% elseif paperResult.passedStatus == 'passed' %}
-      <div class="alert alert-success">{{'恭喜您已通过本次考试。'|trans}}</div>
+  {% if app.user.id == paperResult.userId %}
+    {% if paperResult.status == 'reviewing' %}
+      <div class="alert alert-warning">{{'老师正在批阅试卷，批阅完成后会以站内私信通知您批阅结果，请稍等。'|trans}}</div>
+    {% elseif paperResult.status == 'finished' %}
+      {% if paperResult.teacherSay %}
+        <div class="alert alert-success">
+          <div class=""><strong>{{'评语：'|trans}}</strong></div>
+          <div class="mtm">{{ paperResult.teacherSay|bbCode2Html|raw }}</div>
+        </div>
+      {% endif %}
+      {% if paperResult.passedStatus == 'unpassed' and target|default(null) %}
+        <div class="alert alert-danger">
+          您未通过考试，请<a href="{{ path('course_lesson_redo_test', {lessonId:target.id,testId:paperResult.testId}) }}">重新参加考试</a>，或者重新学习课程。
+        </div>
+      {% elseif paperResult.passedStatus == 'passed' %}
+        <div class="alert alert-success">{{'恭喜您已通过本次考试。'|trans}}</div>
+      {% endif %}
     {% endif %}
   {% endif %}
 
