--- a/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/testpaper-result.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/QuizQuestionTest/testpaper-result.html.twig
@@ -26,7 +26,7 @@
         <div class="alert alert-danger">
           您未通过考试，请<a href="{{ path('course_lesson_redo_test', {lessonId:target.id,testId:paperResult.testId}) }}">重新参加考试</a>，或者重新学习课程。
         </div>
-      {% elseif paperResult.passedStatus == 'passed' %}
+      {% elseif paperResult.passedStatus in ['passed','good','excellent'] %}
         <div class="alert alert-success">{{'恭喜您已通过本次考试。'|trans}}</div>
       {% endif %}
     {% endif %}
