--- a/src/Topxia/AdminBundle/Resources/views/Article/article-picture-crop-modal.html.twig
+++ b/src/Topxia/AdminBundle/Resources/views/Article/article-picture-crop-modal.html.twig
@@ -10,7 +10,7 @@
      
       <div class="form-group clearfix">
         <div class="col-md-offset-2 col-md-8 controls">
-          <img src="{{ filepath(pictureUrl) }}" id="article-pic-crop"
+          <img class="img-responsive" src="{{ filepath(pictureUrl) }}" id="article-pic-crop"
            width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}" />
           <div class="help-block">提示：请选择图片裁剪区域。</div>
         </div>
