--- a/src/Topxia/WebBundle/Resources/views/CourseManage/picture-crop.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/CourseManage/picture-crop.html.twig
@@ -20,7 +20,7 @@
 
       <div class="form-group clearfix">
         <div class="col-md-offset-2 col-md-8 controls">
-          <img src="{{ filepath(pictureUrl) }}"
+          <img class="img-responsive" src="{{ filepath(pictureUrl) }}"
           id="course-picture-crop"
           width="{{scaledSize.width}}" height="{{scaledSize.height}}" data-natural-width="{{ naturalSize.width }}" data-natural-height="{{ naturalSize.height }}" />
           <div class="help-block">{{'提示：请选择图片裁剪区域。'|trans}}</div>
