--- a/src/Topxia/WebBundle/Resources/views/OpenCourse/live-open-course-header.html.twig
+++ b/src/Topxia/WebBundle/Resources/views/OpenCourse/live-open-course-header.html.twig
@@ -51,11 +51,15 @@
   {% else %}
     <div class="mask-content">
       <h2>{{'直播已经结束'|trans}}</h2>
-      {% for replay in lesson.replays if replay %}
-        <a class="btn btn-info btn-lg mask-btn" href="{{ path('live_open_course_live_replay_entry',{courseId:lesson.courseId,lessonId:lesson.id,replayId:replay.id, refererUrl:refererUrl}) }}" target="_blank">{{'查看回放'|trans}}</a>
-        {% else %}
-          <p class="text-info">回放生成中，请稍候再来：）</p>
-      {% endfor %}
+      {% if lesson.replayStatus == 'videoGenerated' %}
+        <button class="btn btn-info btn-lg mask-btn">{{'查看回放'|trans}}</button>
+      {% elseif lesson.replayStatus == 'generated' %}
+        {% for replay in lesson.replays if replay %}
+          <a class="btn btn-info btn-lg mask-btn" href="{{ path('live_open_course_live_replay_entry',{courseId:lesson.courseId,lessonId:lesson.id,replayId:replay.id, refererUrl:refererUrl}) }}" target="_blank">{{'查看回放'|trans}}</a>
+        {% endfor %}
+      {% else %}
+        <p class="text-info">回放生成中，请稍候再来：）</p>
+      {% endif %}
     </div>
   {% endif %}
   </div>
