--- a/web/assets/v2/less/main-en-us.less
+++ b/web/assets/v2/less/main-en-us.less
@@ -9,29 +9,29 @@
 .card-pack-item {
   .stamp {
     &.stamp-outdate {
-      background: url('@{img-src}/en-us/card.png') no-repeat 0 -349px;
+      background: url('@{img-src}en-us/card.png') no-repeat 0 -349px;
     }
     &.stamp-cancel {
-      background: url('@{img-src}/en-us/card.png') no-repeat -410px -351px;
+      background: url('@{img-src}en-us/card.png') no-repeat -410px -351px;
     }
   }
   &.coupon-item {
-    background: url('@{img-src}/en-us/card.png') no-repeat;
+    background: url('@{img-src}en-us/card.png') no-repeat;
     &.useless {
-      background: url('@{img-src}/en-us/card.png') no-repeat 0 -174px;
+      background: url('@{img-src}en-us/card.png') no-repeat 0 -174px;
     }
     .stamp-used {
-      background: url('@{img-src}/en-us/card.png') no-repeat -140px -349px;
+      background: url('@{img-src}en-us/card.png') no-repeat -140px -349px;
     }
   }
 
   &.card-item {
-    background: url('@{img-src}/en-us/card.png') no-repeat -260px 0;
+    background: url('@{img-src}en-us/card.png') no-repeat -260px 0;
     &.useless {
-      background: url('@{img-src}/en-us/card.png') no-repeat -260px -174px;
+      background: url('@{img-src}en-us/card.png') no-repeat -260px -174px;
     }
     .stamp-used {
-      background: url('@{img-src}/en-us/card.png') no-repeat -275px -351px;
+      background: url('@{img-src}en-us/card.png') no-repeat -275px -351px;
     }
   }
 }
@@ -49,11 +49,11 @@
         top: 0;
         width: 68px;
         height: 68px;
-        background: url("@{img-src}/en-us/tag_discount.png");
-        background-image: -webkit-image-set(url("@{img-src}/en-us/tag_discount.png") 1x,url("@{img-src}/en-us/tag_discount@2x.png") 2x);
+        background: url("@{img-src}en-us/tag_discount.png");
+        background-image: -webkit-image-set(url("@{img-src}en-us/tag_discount.png") 1x,url("@{img-src}en-us/tag_discount@2x.png") 2x);
         &.free {
-          background: url("@{img-src}tag_limitfree.png");
-          background-image: -webkit-image-set(url("@{img-src}/en-us/tag_limitfree.png") 1x,url("@{img-src}/en-us/tag_limitfree@2x.png") 2x);
+          background: url("@{img-src}en-us/tag_limitfree.png");
+          background-image: -webkit-image-set(url("@{img-src}en-us/tag_limitfree.png") 1x,url("@{img-src}en-us/tag_limitfree@2x.png") 2x);
         }
       }
       .img-responsive {
@@ -72,18 +72,18 @@
         height: 24px;
       }
       .tag-live {
-        background: url("@{img-src}/en-us/tag_live.png") no-repeat;
-        background-image: -webkit-image-set(url("@{img-src}/en-us/tag_live.png") 1x,url("@{img-src}/en-us/tag_live@2x.png") 2x);
+        background: url("@{img-src}en-us/tag_live.png") no-repeat;
+        background-image: -webkit-image-set(url("@{img-src}en-us/tag_live.png") 1x,url("@{img-src}en-us/tag_live@2x.png") 2x);
         width: 58px;
       }
       .tag-serialing {
-        background: url("@{img-src}/en-us/tag_serialing.png") no-repeat;
-        background-image: -webkit-image-set(url("@{img-src}/en-us/tag_serialing.png") 1x,url("@{img-src}/en-us/tag_serialing@2x.png") 2x);
+        background: url("@{img-src}en-us/tag_serialing.png") no-repeat;
+        background-image: -webkit-image-set(url("@{img-src}en-us/tag_serialing.png") 1x,url("@{img-src}en-us/tag_serialing@2x.png") 2x);
         width: 103px;
       }
       .tag-finished {
-        background: url("@{img-src}tag_finished.png") no-repeat;
-        background-image: -webkit-image-set(url("@{img-src}/en-us/tag_finished.png") 1x,url("@{img-src}/en-us/tag_finished@2x.png") 2x);
+        background: url("@{img-src}en-us/tag_finished.png") no-repeat;
+        background-image: -webkit-image-set(url("@{img-src}en-us/tag_finished.png") 1x,url("@{img-src}en-us/tag_finished@2x.png") 2x);
         width: 84px;
       }
     }
@@ -101,8 +101,8 @@
         display: inline-block;
         width: 68px;
         height: 68px;
-        background: url("@{img-src}/en-us/tag_recommend.png") no-repeat;
-        background-image: -webkit-image-set(url("@{img-src}/en-us/tag_recommend.png") 1x,url("@{img-src}/en-us/tag_recommend@2x.png") 2x);
+        background: url("@{img-src}en-us/tag_recommend.png") no-repeat;
+        background-image: -webkit-image-set(url("@{img-src}en-us/tag_recommend.png") 1x,url("@{img-src}en-us/tag_recommend@2x.png") 2x);
       }
     }
   }
